--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -38,11 +38,14 @@
             android:id="@+id/ssd_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/empty_description"
             android:layout_marginTop="24dp"
+            android:layout_marginBottom="1dp"
+            android:text="@string/empty_description"
             android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ssd_image" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
