--- a/app/src/main/res/layout/ssd_item_list.xml
+++ b/app/src/main/res/layout/ssd_item_list.xml
@@ -2,14 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="8dp"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ssd_image"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintDimensionRatio="1:1"
         android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toStartOf="@id/name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,13 +20,15 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="28dp"
+        app:layout_constraintHorizontal_weight="2"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:text="@string/name"
         app:layout_constraintBottom_toBottomOf="@+id/ssd_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/ssd_image" />
+        app:layout_constraintStart_toEndOf="@+id/ssd_image"
+        app:layout_constraintTop_toTopOf="@+id/ssd_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
